# computer-science-scripts

./: .gitignore
Elixir/: MySigils.ex  case-statement.ex  custom_protocol.ex  deeper-data-matcher.ex  def_protocol.ex  for_date_range.ex  get-token.ex  keyword-list-in-elixir.md  nested-match.ex  placeholder.ex  user-struct.ex
Julia/: ThinkUtil.jl  dataframe2csv.jl  for_in.jl  repl.jl  test_module.jl
Nim/: 2023.json  parse_json.nim
Powershell/: a-class-demo.ps1  add-member.ps1  array-parameter.ps1  class-hierarchy.ps1  cmdlets-notebook.md  convert-to-unixtime.ps1  create-module-structure.ps1  create-task-scheduler.ps1  date-range.ps1  encoded-command.ps1  event-log.ps1  get-dates-bak.ps1  get-dates.ps1  import-csv-to-mysql.ps1  new-module-structure.ps1  new-object-from-hash-table.ps1  package.ps1  pscustom-object.ps1  pscustom.ps1  task-scheduler.ps1
Python/: bigdata_monitor.py  charge-data2-kafka.py  cli_parser.py  diskbalancer.py  hbase2csv.py  hive_jdbc.py  job_monitor.py  jwt_token_decode.py  parse_chinese_holidays.py  query_hive_with_impala.py  query_hive_with_jdbc.py  read_from_database.py  session_split.py
Python/weather/: pyproject.toml
Python/weather/weather/: cli.py
Ruby/: hello.rb  pattern-match.rb
Rust/: easy-rust.adoc
Shell/: beeline_hive_job.sh  etl_from_alg_to_datahouse.sql  export-hdfs  spark-submit
Swift/: actor.swift  add-computed-properties-with-extensions.swift  adding-constraints-to-protocol-extensions.swift  adding-protocol-conformance-with-an-extension.swift  adopting-a-protocol-using-synthesized-implementation.swift  array.swift  (+193 more)
(+157 files in other folders)
