[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["ohmycloudy@gmai.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
click = "^8.1.3"

[tool.poetry.scripts]
weather = "weather.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
